AI-2.2.2 <tadeu@probook Update other.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Simulador_Veiculo</string>
     <string-array name="veiculos_array">
+        <item>Selecione o carro</item>
         <item>Palio</item>
         <item>Uno</item>
         <item>Punto</item>
